Completed migration to PostgreSQL (still SQL injection vulnerable)

--- a/app/static/css/event.css
+++ b/app/static/css/event.css
@@ -34,7 +34,7 @@ h1 {
     margin-bottom: 15px;
 }
 .date, .location {
-    background-color: #3498db;
+    background-color: #ffd903;
     color: white;
     padding: 5px 10px;
     border-radius: 3px;
