--- a/app/templates/events/event.html
+++ b/app/templates/events/event.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ event[0][1] }}</title>
-    <link rel="icon" href="../static/images/logo.png"/>
+    <!--<link rel="icon" href="../static/images/logo.png"/>-->
     <link rel="stylesheet" href="../../static/css/event.css">
-    <link rel="stylesheet" href="../../static/css/navigation.css">
 </head>
 <body>
     <header>
+        <!--
         <nav class="navbar">
             <div class="logos">
                 <a href="/"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
@@ -24,6 +24,7 @@
                 <img id="menu__closer" onclick="menuDictating()" class="x_button" src="../static/images/close.png" alt="error img">
             </div>
         </nav>
+        -->
     </header>
     <main>
         <div id="menu__body" class="menu_active">
